WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
311961
outlook.live.com: Unable to change selected text
https://bugs.webkit.org/show_bug.cgi?id=311961
Summary
outlook.live.com: Unable to change selected text
ccarley2
Reported
2026-04-10 12:28:10 PDT
I am unable to change the selected text. Instead of the selection moving, the whole page moves
Attachments
Add attachment
proposed patch, testcase, etc.
ccarley2
Comment 1
2026-04-10 12:28:11 PDT
<
rdar://problem/151851274
>
ccarley2
Comment 2
2026-04-10 12:39:56 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/62477
EWS
Comment 3
2026-04-14 12:07:31 PDT
Committed
311216@main
(6ada1137f92b): <
https://commits.webkit.org/311216@main
> Reviewed commits have been landed. Closing PR #62477 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug